<resources>
    <!--    // Button nav-->
    <string name="app_name">ScanQRLite</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_create">Create</string>
    <string name="menu_history">History</string>
    <string name="menu_setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-0664570763252260/3326522424</string>
    <string name="interstitial_full_screen">ca-app-pub-0664570763252260/1769900428</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--    // Tutorial-->
    <string name="title_tutorial">To scan the code, point your camera at it.</string>
    <string name="tutorial_first">On the code, avoid reflected light or shadow.</string>
    <string name="tutorial_second">Place your phone in such a way that it faces the code without tilting</string>
    <string name="allow_permission">ALLOW PERMISSION </string>
    <string name="ok">OKE</string>
    <string name="warming">WARNING!</string>
    <string name="notification">Scan barcode need permission Camera</string>

    <!--    // Scan-->
    <string name="focus">Focus QR/barcode into area</string>
    <string name="gallery">GALLERY</string>
    <string name="flash">FLASH</string>

    <!--    //Create-->
    <string name="create_button">CREATE</string>
    <string name="wifi_button">Wifi</string>
    <!--    // Create_Text-->
        <string name="content">Content:</string>
        <string name="enter_text">Enter text here</string>
        <string name="please_enter_your_content">Please enter your content</string>
    <!--    // Create_URL-->
        <string name="url_result">URL:</string>
        <string name="enter_url">Enter URL here</string>
        <string name="please_enter_your_url">Please enter your url</string>
    <!--    // Create_Wifi-->
        <string name="network_name">"Network name: "</string>
        <string name="enter_network_name"> Enter network name here</string>
        <string name="password_">Password:</string>
        <string name="enter_password">Enter password here</string>
        <string name="security">Security</string>
        <string name="account_not_be_blank">Account not be blank</string>
        <string name="password_please_enter_more_than_8_character">Password please enter more than 8 character</string>

    <string-array name="strings_type_internet_dropdown">
        <item>WPA/ WPA2</item>
        <item>WEP</item>
        <item>Nothing</item>
    </string-array>

    <!--    //Result-->
    <string name="copy_success">Copy Success</string>
    <string name="save_QR">SAVE QR</string>
    <string name="save_success">Save Success</string>
    <!--    // Result_Text-->
        <string name="title_text">Text</string>
        <string name="note">Note:</string>
    <!--    //Result_URL-->
    <string name="goto_url">GOTO URL</string>
    <!--    // Result_Wifi-->
        <string name="title_wifi">Wifi</string>
        <string name="connect">CONNECT</string>

    <!-- History-->
    <string name="copy_text">Copy Text</string>
    <string name="title_scan">Scan</string>
    <string name="title_create">Create</string>
    <string name="search">Search</string>
    <string name="share">Share</string>

    <!--    //Setting-->
    <string name="title_settings">Settings</string>
    <string name="beep">Beep</string>
    <string name="vibrate">Vibrate</string>
    <string name="auto_copy">Auto copy clipboard</string>
    <!--    // Change language-->
        <string name="change_language">Change Language</string>
        <string name="english">English</string>
        <string name="french">French</string>
        <string name="german">German</string>
        <string name="chinese">Chinese</string>
        <string name="korean">Korean</string>
        <string name="vietnamese">Vietnamese</string>
    <!--    // Question and answer -->
        <string name="question_and_answer">Question &amp; answer</string>
        <string name="question_1">Why is QR code not working?</string>
        <string name="content_question_1">Sometimes the QR code contains website links. If the website is not working,only the company that owns the website (and may have created the QR code) can fix that. Unfortunately, we can not do anything in this case.</string>
        <string name="question_2">Can I scan the code into a PDF file?</string>
        <string name="content_question_2">There are yes, steps will as this: Open a PDF file and capture the screen using the screen capture function.
                Then, scan the screen.</string>
        <string name="question_3">Does the app have an API or similar software?</string>
        <string name="content_question_3">Our QR Scanner can be launched from other websites through the interface setup program.</string>
    <!--    // Feedback-->
        <string name="feedback">Feedback</string>
        <string name="dialog_question_feedback_1">"Many questions have been answered in Question &amp; answer.\nIf possible, take or attach a barcode or screenshot.\n"</string>
        <string name="no">No</string>
        <string name="yes">Yes</string>
    <!--    // Rate me on CHPlay-->
        <string name="rate">Rate me on CHPlay</string>
        <string name="vote">Vote</string>
        <string name="vote_again">Vote again</string>
    <string name="open_chplay">OpenCHPlay</string>
        <string name="Ratings_to_boost">Ratings to boost your app rankings on the app market.</string>
        <string name="report_bug">Report bugs and let us know what needs improvement.</string>
        <string name="thank_you">Thank you for voting for the app.</string>
    <string name="version">"Version Lite: "</string>
    <string name="save_barcode">SAVE BARCODE</string>>
    <string name="title_product">Product</string>
    <string name="product">Product:</string>
    <string name="url">URL</string>
    <string name="feedback_title">Scan QR Lite Feedback</string>
    <string name="send_email">Send Email</string>
    <string name="email_not_installed">Email not installed</string>
    <string name="cant_scan">QR code/Barcodes not found</string>
    <string name="security_result">Security:</string>
</resources>