<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_fragment"
    tools:context=".create.create_item.Create_Text">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_input"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_button_edit_text_while"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingTop="12dp"
                android:text="@string/url_result"
                android:textColor="@color/color_2"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/enter_url"
                android:textColorHint="@color/black20"
                android:inputType="text"
                android:maxHeight="250dp"
                android:minHeight="136dp"
                android:paddingLeft="12dp"
                android:paddingTop="0dp"
                android:paddingRight="12dp"
                android:paddingBottom="12dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cus_cursor"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/cus_btn_create"
            android:elevation="0dp"
            android:letterSpacing="0.05"
            android:minWidth="160dp"
            android:text="@string/create_button"
            android:textColor="@color/black20"
            android:stateListAnimator="@null"
            android:textFontWeight="900"
            android:textSize="18sp" />

    </RelativeLayout>
</ScrollView>