<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".setting.Setting"
    android:background="@color/background_fragment">
    <ScrollView
        android:layout_below="@id/title_Setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/list_item_1"
                android:layout_width="match_parent"
                android:layout_height="216dp"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/cus_list_setting"
                android:weightSum="4">
                <LinearLayout
                    android:id="@+id/btn_sw_beep"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    android:background="@drawable/cus_list_item_top"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/beep"
                        android:layout_weight="2"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:letterSpacing="0.05"
                        android:gravity="center_vertical"
                        android:padding="12dp"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sw_beep"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:padding="12dp"
                        android:gravity="center"
                        android:checked="false"
                        android:thumb="@drawable/cus_thumb_switch"
                        app:track="@drawable/cus_track_switch"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_sw_vibrite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/cus_item_setting"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/vibrate"
                        android:layout_weight="2"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:letterSpacing="0.05"
                        android:gravity="center_vertical"
                        android:padding="12dp"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sw_vibrite"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:padding="12dp"
                        android:gravity="center"
                        android:checked="false"
                        android:thumb="@drawable/cus_thumb_switch"
                        app:track="@drawable/cus_track_switch"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_sw_clipboard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/auto_copy"
                        android:layout_weight="2"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:letterSpacing="0.05"
                        android:gravity="center_vertical"
                        android:padding="12dp"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sw_clipboard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:padding="12dp"
                        android:gravity="center"
                        android:checked="false"
                        android:thumb="@drawable/cus_thumb_switch"
                        app:track="@drawable/cus_track_switch"/>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/btn_language"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/txt_language"
                        android:gravity="center_vertical"
                        android:letterSpacing="0.05"
                        android:padding="12dp"
                        android:text="@string/change_language"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                    <TextView
                        android:id="@+id/txt_language"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="English"
                        android:layout_weight="1"
                        android:textSize="24sp"
                        android:fontFamily="@font/agencyb"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:letterSpacing="0.03"
                        android:gravity="center"
                        android:layout_alignParentRight="true"
                        android:padding="12dp"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@id/list_item"
                android:layout_width="match_parent"
                android:layout_height="216dp"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_below="@id/list_item_1"
                android:background="@drawable/cus_list_setting"
                android:weightSum="4">
                <LinearLayout
                    android:id="@+id/btn_QA"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/cus_list_item_top"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/question_and_answer"
                        android:layout_weight="2"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:letterSpacing="0.05"
                        android:gravity="center_vertical"
                        android:padding="12dp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/cus_item_setting"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/feedback"
                        android:splitMotionEvents="false"
                        android:layout_weight="2"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:letterSpacing="0.05"
                        android:gravity="center_vertical"
                        android:padding="12dp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_rate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/cus_item_setting"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/rate"
                        android:layout_weight="2"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:letterSpacing="0.05"
                        android:gravity="center_vertical"
                        android:padding="12dp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/verion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/txt_version"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/version"
                        android:layout_weight="3"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:letterSpacing="0.05"
                        android:gravity="center_vertical"
                        android:padding="12dp"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/title_Setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background_fragment">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="20dp"
            android:paddingTop="40dp"
            android:paddingBottom="10dp"
            android:fontFamily="@font/agencyb"
            android:text="@string/title_settings"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.gms.ads.AdView
            android:name="com.google.android.gms.ads.APPLICATION_ID"
            android:id="@+id/adsViewSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_gravity="center_horizontal">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</RelativeLayout>