<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_conner_tutorial"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/txt_title_tutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="33dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/title_tutorial"
        android:textColor="@color/normal_btn"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_below="@+id/txt_title_tutorial"
        android:id="@+id/txt_content_tutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_tutorial1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/agencyr"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/tutorial_first"
            android:textAllCaps="false"
            android:textColor="@color/normal_btn"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_tutorial2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_tutorial1"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/tutorial_second"
            android:textAllCaps="false"
            android:textColor="@color/normal_btn"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/img_qr_tutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_content_tutorial"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/qrfail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_qrcode_fail"
            app:iconPadding="0dp" />

        <ImageView
            android:id="@+id/qrtrue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_qrcode_true" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_ok_tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_qr_tutorial"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_btn_ok" />

</RelativeLayout>
